# Ablativo

./: .gitignore  README.md  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: release.yml
src/: animator.js  audio.js  index.html  main.js  settings.css  settings.html  settings.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
