[package]
name = "ablativo-tauri"
version = "0.1.0"
description = "Ablativo — local voice transcription"
authors = ["Alberto De Col"]
edition = "2021"

[lib]
name = "ablativo_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
hound = "3"
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

