[package]
name = "ablativo-tauri"
version = "1.2.0"
description = "Ablativo — local voice transcription"
authors = ["Alberto De Col"]
edition = "2021"

[lib]
name = "ablativo_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
arboard = "3"
cpal = "0.15"
enigo = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vad-rs = { git = "https://github.com/cjpais/vad-rs", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
transcribe-rs = { version = "=0.3.8", features = ["onnx", "ort-directml"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
transcribe-rs = { version = "=0.3.8", features = ["onnx"] }
